---
source: tests/files.rs
expression: visualization.result
---
inc {
block:
 max: int = const 2;
 cond: bool = lt x max;
 if cond:
  one: int = const 1;
  x: int = add one x;
  print x;
  x: int = call @inc x;
 else:


return x
}

main {
a: int = const 0;
c: int = call @inc a;
print c;
return
}
